# F_ooredoo

./: .gitignore  LICENSE  QUICK_REFERENCE.txt  README.md  build.sh  build_deb.sh  check_package.py  combined_files.txt  convert_photo_to_icon.sh  create_icon.py  fuckooredoo.desktop  generate_icons.sh  get_magnet.py  gui.py  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh  test.sh  test_deb.sh  test_download.py  test_run.sh  tomb_raider_magnet.txt  upload_to_ppa.sh  use_my_photo_as_icon.sh  verify.py
.github/workflows/: workflow.yml
.pybuild/cpython3_3.12_fuckooredoo/: fuckooredoo-1.0.4-py3-none-any.whl
.pybuild/cpython3_3.12_fuckooredoo/scripts/: fuckooredoo
debian/: changelog  control  files  fuckooredoo.1  fuckooredoo.postinst.debhelper  fuckooredoo.prerm.debhelper  fuckooredoo.substvars  install  postinst  postrm  prerm  rules  watch
debian/fuckooredoo/DEBIAN/: control  md5sums  postinst  postrm  prerm
debian/fuckooredoo/usr/share/doc/fuckooredoo/: copyright
debian/source/: include-binaries
fuckooredoo/: __init__.py  __main__.py  install_tkinter.py  main.py  torrent_client.py
