[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuckooredoo"
version = "1.0.2"
description = "Secure Torrent Downloader with Tor-based Anti-Throttling - Bypasses ISP throttling through Tor network routing and traffic encryption"
readme = "README.md"
authors = [
    {name = "Mohamed Aziz Bahloul", email = "aziz.bahloul@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: File Sharing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
]
keywords = ["torrent", "downloader", "tor", "anti-throttling", "isp-bypass", "bittorrent", "p2p"]
dependencies = [
    "libtorrent>=2.0.9",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "darkdetect>=0.8.0",
    "typing-extensions>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/AzizBahloul/F_ooredoo"
"Bug Tracker" = "https://github.com/AzizBahloul/F_ooredoo/issues"
"Source Code" = "https://github.com/AzizBahloul/F_ooredoo"

[project.scripts]
fuckooredoo = "fuckooredoo.__main__:main"

[tool.setuptools]
packages = ["fuckooredoo"]

[tool.setuptools.package-data]
fuckooredoo = ["*.py"]
